<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/ivProfile"
        android:layout_marginLeft="@dimen/_20sdp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/line_color"
        android:layout_marginTop="@dimen/_20sdp"
        />

    <LinearLayout
        android:id="@+id/llAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        >

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_blue_user"
            android:layout_gravity="center_vertical"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_offer"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_offers"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_blue_order"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_location"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_blue_payment"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        >
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/exit"
            android:layout_gravity="center_vertical"
            app:tint="@color/bright_blue" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/hint_color"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            />

    </LinearLayout>
</LinearLayout>
</layout>
