<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <include
                android:id="@+id/layout_myProfile"
                layout="@layout/layou_header"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp"
                >
            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/name"
                android:textSize="@dimen/_12sdp"
                />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:background="@drawable/light_gray_border"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/hint_color"
                    android:textColorHint="@color/hint_color"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_toRightOf="@+id/ivEMail"
                    android:padding="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    />

            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bright_blue"
            android:textAllCaps="false"
            android:text="@string/save"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_margin="@dimen/_15sdp"
            />
    </RelativeLayout>

</layout>