<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activities.LoginActivity"
        android:padding="@dimen/_20sdp"
        android:background="@drawable/log_bg1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_130sdp"
                />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enter_email"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:fontFamily="@font/montserrat_regular"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="@dimen/_15sdp"
                />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enter_password"
                android:textSize="@dimen/_12sdp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:imeOptions="actionDone"
                android:fontFamily="@font/montserrat_regular"
                />

            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_gravity="end"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_bg"
                android:textAllCaps="false"
                android:text="@string/login"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_25sdp"
                />
          
        </LinearLayout>

        <!--

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitle"
                    android:text="@string/cribs"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_below="@+id/ivLogo"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_50sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/say_wtf_you_want"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tvTitle"
                    />
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <!--

                    <TextView
                        android:id="@+id/createId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_20sdp"
                        android:text="Create New Account"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:textSize="@dimen/_16sdp" />


            -->

        </LinearLayout>


        <TextView
            android:id="@+id/tvDontHv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/_11sdp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            />

    </RelativeLayout>
</layout>